--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -1,8 +1,7 @@
 body {
-	font-family: $fontFamily;
+	font-family:'Montserrat', sans-serif;
 	background-image: url(../img/fondo1.jpg);
 	background-position: center;
-
 	h1 {
 		color: $colorTexto;
 		text-align: center;
