--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -3,8 +3,9 @@
 	padding: 0;
 }
 
-@import url('https://fonts.googleapis.com/css2? family= Montserrat & display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 @import "variables";
+@import "mixin";
 @import "body";
 @import "header";
 @import "footer";
