ajustes scroll lateral y fotoproducto

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -9,6 +10,7 @@ body {
   background-image: url(../img/fondo1.jpg);
   background-position: center;
 }
+
 body h1 {
   color: white;
   text-align: center;
@@ -22,15 +24,18 @@ header {
   background: linear-gradient(to right, rgb(0, 0, 0), rgb(5, 1, 21));
   padding: 10px 20px;
 }
+
 header .logo {
   width: 110px;
   padding-top: 10px;
   padding-bottom: 10px;
   padding-left: 10px;
 }
+
 header .navbar-nav .nav-link:hover {
   color: #DD34F8;
 }
+
 header .navbar-nav li,
 header .navbar-nav a {
   text-decoration: none;
@@ -47,13 +52,16 @@ footer {
   text-align: center;
   padding: 20px;
 }
+
 footer .logoFooter {
   width: 50px;
 }
+
 footer .logoRedes {
   width: 22px;
   margin: 10px;
 }
+
 footer h3 {
   font-size: 12px;
   font-weight: lighter;
@@ -67,6 +75,7 @@ footer h3 {
   font-weight: bold;
   transition: 0.5s;
 }
+
 .colorBtn:hover {
   transform: scale(1.1);
   background-color: #A117B8;
@@ -80,16 +89,19 @@ footer h3 {
   justify-content: center;
   align-items: center;
 }
+
 .inicio button a {
   text-decoration: none;
   font-weight: bold;
   padding: 5px;
 }
+
 .inicio .colorBtnSpotify {
   background-color: #1DB954;
   color: white;
   transition: 0.5s;
 }
+
 .inicio .colorBtnSpotify:hover {
   background-color: #10a343;
   color: white;
@@ -114,11 +126,13 @@ footer h3 {
   flex-direction: column;
   align-items: center;
 }
+
 .divShow .textoShow {
   margin: 5% 10%;
   text-align: center;
   color: white;
 }
+
 .divShow .videoShow {
   width: 80%;
   height: 500px;
@@ -126,13 +140,28 @@ footer h3 {
 }
 
 /* PRODUCTOS */
+.titProducto {
+  font-size: 2.5rem;
+}
+
 .contenedorProductos {
   padding: 3%;
 }
+
 .contenedorProductos .card {
+  overflow: hidden;
   background-color: black;
   color: white;
   margin: 10px 0px;
+}
+
+.contenedorProductos .card img {
+  transition: 0.3s;
+}
+
+.contenedorProductos .card img:hover {
+  transform: scaleX(1.05);
+  opacity: 0.7;
 }
 
 /* CONTACTO */
@@ -145,15 +174,18 @@ form {
   margin-bottom: 50px;
   margin-left: 20px;
 }
+
 form label {
   font-weight: bold;
   color: white;
 }
+
 form .campos {
   width: 85%;
   padding: 10px;
   font-size: 20px;
 }
+
 form .campos .btnForm {
   margin-top: 10px;
 }
@@ -168,10 +200,12 @@ form .campos .btnForm {
   .botones {
     margin: 10px;
   }
+
   .videoShow {
     height: 200px;
   }
 }
+
 @media (min-width: 576px) and (max-width: 768px) {
   .videoShow {
     height: 300px;
