--- a/css/estilo.css
+++ b/css/estilo.css
@@ -16,7 +16,7 @@ body h1 {
   text-align: center;
   text-transform: uppercase;
   padding: 20px;
-  font-size: 50px;
+  font-size: 2.5rem;
   font-weight: bold;
 }
 
@@ -108,11 +108,19 @@ footer h3 {
   transform: scale(1.1);
 }
 
+@media screen and (max-width: 576px) {
+  .inicio .botones {
+    margin: 5px;
+  }
+}
+
 /* EL TROPI */
 .cardTropi {
-  padding: 50px;
+  padding: 40px;
   background: linear-gradient(to right, rgb(0, 0, 0), rgb(3, 0, 15));
   color: white;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 /* SHOWS */
@@ -139,11 +147,19 @@ footer h3 {
   margin-bottom: 3%;
 }
 
-/* PRODUCTOS */
-.titProducto {
-  font-size: 2.5rem;
+@media screen and (max-width: 768px) {
+  .divShow .videoShow {
+    height: 300px;
+  }
 }
 
+@media screen and (max-width: 576px) {
+  .divShow .videoShow {
+    height: 200px;
+  }
+}
+
+/* PRODUCTOS */
 .contenedorProductos {
   padding: 3%;
 }
@@ -194,22 +210,6 @@ form .campos .btnForm {
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-@media (max-width: 576px) {
-  .botones {
-    margin: 10px;
-  }
-
-  .videoShow {
-    height: 200px;
-  }
-}
-
-@media (min-width: 576px) and (max-width: 768px) {
-  .videoShow {
-    height: 300px;
-  }
 }
 
 /*# sourceMappingURL=estilo.css.map */
