--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -7,7 +7,7 @@ body {
 		text-align: center;
 		text-transform: uppercase;
 		padding: 20px;
-		font-size: 50px;
+		font-size: 2.5rem;
 		font-weight: bold;
 	}
 }
