--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -10,6 +10,7 @@
 @import "header";
 @import "footer";
 @import "estilobtn";
+@import "mediaqueries";
 
 /* INDEX */
 
@@ -36,14 +37,22 @@
 			transform: scale(1.1);
 		}
 	}
+
+	.botones {
+		@include mobile {
+			margin: 5px;
+		}
+	}
 }
 
 /* EL TROPI */
 
 .cardTropi {
-	padding: 50px;
+	padding: 40px;
 	background: linear-gradient(to right, rgb(0, 0, 0), rgb(3, 0, 15));
 	color: $colorTexto;
+	margin-top: 20px;
+	margin-bottom: 20px;
 }
 
 /* SHOWS */
@@ -68,14 +77,18 @@
 		width: 80%;
 		height: 500px;
 		margin-bottom: 3%;
+
+		@include tablet {
+			height: 300px;
+		}
+
+		@include mobile {
+			height: 200px;
+		}
 	}
 }
 
 /* PRODUCTOS */
-
-.titProducto {
-	font-size: 2.5rem;
-}
 
 .contenedorProductos {
 	padding: 3%;
@@ -129,5 +142,3 @@ form {
 	justify-content: center;
 	align-items: center;
 }
-
-@import "mediaqueries";
